# xfields

./: .gitignore  L0combi copy.py  MANIFEST.in  NOTICE  README.md  THIRD_PARTY_NOTICES  __init__.py  bb6d_update.py  contributors_and_credits.txt  gitlabkey  gitlabkey.pub  mktest  omp_test  omp_test.c  pyproject.toml  setup.py  task  update_copyright_statement.py  xfieldsdevlumikey  xfieldsdevlumikey.pub
beam_elements/: beambeam3d.py  electroncloud.py  spacecharge.py
docs/: apireference.rst  autogeneration.rst  beamelements.rst  conf.py  contexts.rst  fieldmaps.rst  gettingstarted.rst  history.rst  index.rst  installation.rst  mysection.rst  platforms.rst  solvers.rst
examples/: 001_test_compile.c  L0combi.py  L0combinotebook.ipynb  Luminositycomparison  Luminositycomparison.py  centroids.py  fft_graphs.py  morefft.py  orbitcorrection_graphs.py  t000_check_non_linear.py  tests.py
fieldmaps/: __init__.py
headers/: bhabha_spectrum.h  lumicalc.h
tests/: beambeam_Gxy_test.py  conftest.py  ibs_conftest.py  test_alpha_pi_setter.py  test_beambeam.py  test_beambeam2d.py  test_beambeam3d.py  test_beambeam3d_part1.py  test_beambeam3d_part2.py  test_beambeam_pic.py  test_beambeamstrongstrong2d.py  test_beambeamstrongstrong2d_pi.py  test_beambeamstrongstrong3d.py  test_beambeamstrongstrong3d_pi.py  test_beamstrahlung.py  test_beamstrahlung_pic.py  test_beamstrahlung_tracking.py  test_bhabha.py  test_cerrf.py  test_change_pic_mesh.py  test_collective_monitor.py  test_compressed_profile_interp_result.py  test_config_pipeline_for_wakes.py  test_constant_charge_slicing.py  (+33 more)
(+403 files in other folders)
